--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node src/server.js",
-    "start:dev": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
