--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,17 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "node": true,
+    "es6": true,
+    "jest": true,
+    "jasmine": true
   },
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
@@ -16,10 +20,10 @@
     "sourceType": "module"
   },
   "plugins": ["react"],
-  "rules": {
-    "indent": ["error", 4],
-    "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"]
-  }
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  },
+  "rules": {}
 }
