--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
     "firebase": "^7.14.2",
-    "re-base": "^4.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^2.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
